Fixed small bug from break the app session where hovering over boxes shifts down everything below it

--- a/savour-app/public/stylesheets/admin.css
+++ b/savour-app/public/stylesheets/admin.css
@@ -35,7 +35,6 @@ figcaption {
 }
 
 .toggle-more-less:hover {
-   border: 1px solid rgba(0,0,0,.5);
    color: rgba(0,0,0,.8);
    background-color: #cccccc;                    
 }
